# sirius2024

./: .gitignore  .gitmodules  .ocamlformat-enable  DEV.md  README.md  ask.py  client.ml  dune  expr.t  funs.t  hardcoded.py  index.html  loops.t  main.py  ostap  setup.sh
.github/workflows/: master.yml
L0/: .gitignore  L0.ml  LibSerialize.ml  Makefile  README.md  client.bc.js  client.ml  index.html  index2.html  jsL0.ml
L1/: L1.ml  Makefile  dune
L2/: L2.ml  Makefile
L3/: L3.ml  Makefile  dune  t01.l3  t02.l3  t03.l3  t04.l3  t05.l3  t06.l3  testL3.ml
memo/: 01.tex  02.tex  03.tex  Makefile  main.tex
tasks/1expr/: 1.bc.json  1.lama  1.lama.json  dune
tasks/2loops/: 1.lama.json  1fac.lama  2.lama.json  dune
tasks/3functions/: 1.lama  1.lama.json  dune
