(env
 (dev
  (flags
   (:standard -warn-error -A))))

(library
 (name L3)
 (libraries ostap GT yojson)
 (modules L3)
 (wrapped false)
 (flags
  (:standard -rectypes))
 (preprocessor_deps
  (file %{project_root}/pp5+gt+plugins+ostap+dump.byte)
  ;(file %{project_root}/src/pp5+gt+plugins+ostap+dump.exe)
  )
 (preprocess
  (action
   (run %{project_root}/pp5+gt+plugins+ostap+dump.byte %{input-file}))))

(library
 (name testL3)
 (modules testL3)
 (libraries L3)
 (inline_tests)
 (flags
  (:standard -rectypes))
 (preprocessor_deps
  (file t01.l3)
  (file t02.l3)
  (file t03.l3)
  (file t04.l3)
  (file t05.l3)
  (file t06.l3))
 (preprocess
  (pps ppx_expect ppx_blob)))
