(rule
 (deps
  (:lama 1.lama))
 (targets 1.lama.json)
 (mode (promote))
 (action
  (progn
   ;(run ls ../../../runtime)
   (run
    %{project_root}/json/json_bytecode.exe
    -path
    ../../../runtime
    -o
    %{targets}
    -src2json
    %{lama}))))

(rule
 (deps
  (:lama 1.lama))
 (targets 1.bc.json)
 (mode (promote))
 (action
  (progn
   ;(run ls ../../../runtime)
   (run
    %{project_root}/json/json_bytecode.exe
    -path
    ../../../runtime
    -o
    %{targets}
    -compile-to-bc-json
    %{lama}))))
